@@ -95,6 +95,7 @@ test-cdda.toc application/x-cdrdao-toc
 test-cdrom.toc application/x-cdrdao-toc
 # Copied from /etc/sysconfig/iptables
 test.iptables text/x-iptables
+test-vpn.pcf application/x-cisco-vpn-settings x
 
 # xml subtypes
 test.ttx application/x-font-ttx
